# pygp-sandbox

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.config/: env_template
.config/matplotlib/: matplotlibrc
gp_sand/: __init__.py  generate.py  gp.py  gp_benchmark.py  heteroscedastic.py  likelihoods.py  means.py  metrics.py  models.py  simple_gp.py  utils.py
notebooks/: basic-gpytorch-example-adjusted.ipynb  basic-gpytorch-example.ipynb  demonstrate-heteroscedastic-gp.ipynb  demonstrate-pc-gp.ipynb  test-1d-model-heteroskedastic.ipynb  test-claude-code.ipynb  test-pipeline-full.ipynb  test-with-turb-data.ipynb
