[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gp-sandbox"
version = "0.1.0"
description = "Benchmark comparison of python library offering implementation of Gaussian Processes"
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Clément Jacquet", email = "donot@email.me"}
]
keywords = ["gaussian-process", "machine-learning", "benchmark", "gpytorch", "gpjax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.3.3",
    "h5py>=3.15.1",
    "netcdf4>=1.7.3",
    "xarray>=2025.12.0",
    "scikit-learn>=1.7.2",
    "dask>=2025.11.0",
    "dask[distributed]",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.2",
    "torch>=2.0.0",
    "gpytorch>=1.11",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "gpjax>=0.8.0",
    "jaxtyping>=0.2.23",
    "optax>=0.1.7",
    "jaxlib[cpu]>=0.4.20",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/gp-benchmark"
Documentation = "https://github.com/yourusername/gp-benchmark/blob/main/README.md"
Repository = "https://github.com/yourusername/gp-benchmark"

[project.scripts]
gp-benchmark = "gp_benchmark:main"

[tool.setuptools]
packages = ["gp_sand"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
